# my-cyber-tool

./: .gitignore  README.md  RELEASE.md  package-lock.json
.github/workflows/: ci.yml  package.yml
app/: .backend-features.json  .dockerignore  .env.example  Dockerfile  README.docker.md  README.md  README_DEPLOY.md  SAFETY.md  db_status.py  docker-compose.prod.yml  docker-compose.yml  index.html  launcher.py  package-lock.json  package.json  package_windows.py  run.py  setup_windows.py  test_admin_login.py  test_approved_login.py  test_full_auth_flow.py  test_hash.py  test_new_user.py  tsconfig.app.json  tsconfig.server.json  vite.config.ts
app/api/: admin-router.ts  ai-router.ts  ai.ts  auth-router.ts  auth.ts  boot.ts  context.ts  cyber-range-router.ts  dashboard-router.ts  defense-router.ts  health-router.ts  python-router.ts  report-router.ts  router.ts  scan-router.ts  session.ts  tools-router.ts  types.ts
app/api/lib/: env.ts
app/api/queries/: connection.ts  users.ts
app/contracts/: constants.ts
app/db/: relations.ts  schema.ts  seed.ts
app/python-service/: README.python.md  main.py  pyproject.toml  requirements.txt  tools.json  users.json
app/scanner/: Dockerfile  entrypoint.sh
app/src/: App.tsx  index.css  main.tsx
app/src/components/: ActiveDefenseSection.tsx  AnimatedMetric.tsx  HealthBar.tsx  MetricCard.tsx  ModuleZones.tsx  Navigation.tsx  PageFrame.tsx  ReportExport.tsx  ScanTerminal.tsx  SystemHealthPanel.tsx
app/src/pages/: Admin.tsx  Assistant.tsx  CryptoStego.tsx  Home.tsx  Login.tsx  Register.tsx  (+1 more)
app/types/: bcryptjs.d.ts
